--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@
     min-width:480px;
 }
 
-.flip-switchers{
+.flip-switcher{
     font-size: 12px;
     padding: 2px 4px;
     box-sizing: border-box;
