--- a/styles/main.css
+++ b/styles/main.css
@@ -14,21 +14,21 @@
 
 .canvas-wrapper canvas{
 	display: none;
-	
+
 }
 
 .displayCanvas{
 	display: block!important;
 }
 
-.flip-switcher{
+/* .flip-switcher{
 	font-size: 12px;
 	padding: 2px 4px;
 	box-sizing: border-box;
 	border:1px solid #666;
 	background-color: rgba(255, 255, 255, 0.493);
 	cursor: pointer;
-}
+} */
 
 .color-square{
 	display: block;
