--- a/styles/main.css
+++ b/styles/main.css
@@ -73,3 +73,13 @@ html {
 }
 
 
+.form-on-canvas{
+	position: absolute;
+
+}
+.form-on-canvas-top{
+	top:-10px;
+	left: 50%;
+	transform: translateX(-50%);
+	width:65px;
+}
