--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,10 @@ html {
 }
 
 .canvas-input{
+	background-color: #fffc;
+	border-radius: 5px;
+	padding: 2px;
+	box-sizing: border-box;
 	position: absolute;
 	display: flex;
 	flex-flow: column wrap;
@@ -26,9 +30,9 @@ html {
 	align-items: center;
 	font-size: 12px;
 	box-sizing: border-box;
-	background-size: 40px 40px;
+	background-size: 42px 42px;
 	background-repeat: no-repeat;
-	background-position: left center;
+	background-position: left 5px bottom 2px;
 }
 
 .canvas-input input{
